# M450---Applikationen-testen

./: .gitignore  codecov.yml  readme.md
.github/workflows/: backend.yml  frontend.yml
ReactRustTodo/: Readme.md  Test Todos.md  Testkonzept.md
ReactRustTodo/backend/: .gitignore  Backend Test Dokumentation.md  Cargo.toml  Test Todos für das Backend.md  integration_test.sh  package-lock.json  package.json  test.sh
ReactRustTodo/backend/coverage/: lcov.info
ReactRustTodo/backend/migrations/2023-07-25-164054_create_todos/: up.sql
ReactRustTodo/backend/src/: lib.rs  main.rs
ReactRustTodo/backend/src/api/: api.rs
ReactRustTodo/backend/src/models/: todo.rs
ReactRustTodo/backend/src/repository/: database.rs  mem_repo.rs  mod.rs  mysql_repo.rs  schema.rs  todo_repo.rs
ReactRustTodo/backend/static/: index.html
ReactRustTodo/backend/tests/: lib.rs  mem_repo.rs  models.rs
ReactRustTodo/backend/tests/api/: api.rs  api_test.rs
ReactRustTodo/frontend/: Frontend_Test_Documentation.md  README.md  babel.config.cjs  index.html  jest.config.cjs  jest.config.ts  package-lock.json  package.json  playwright.config.ts  run_backend.sh  tsconfig.jest.json  vite.config.ts
ReactRustTodo/frontend/.github/workflows/: ci.yml
ReactRustTodo/frontend/coverage/: clover.xml  coverage-final.json  lcov.info
ReactRustTodo/frontend/coverage/lcov-report/: index.html
ReactRustTodo/frontend/src/: App.tsx  index.css  types.ts
ReactRustTodo/frontend/src/components/: CreateTodoModal.tsx  EditModal.tsx  Todos.tsx
ReactRustTodo/frontend/src/middleware/: Controller.ts
(+26 files in other folders)
