[package]
name = "TodoRustRocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.2"
diesel = { version = "2.1.0", features = ["mysql", "r2d2", "chrono"] }
dotenvy = "0.15"
serde = { version = "1.0.175", features = ["derive"] }
chrono = { version = "0.4.26", features = ["serde"] }
actix-cors = "0.6.4"